# rust101

./: .gitignore  Cargo.toml  note.txt  state.json
blog-actix/: .env  Cargo.toml  ac  note.md
blog-actix/migrations/2026-01-13-112444-0000_index_username/: up.sql
blog-actix/migrations/2026-01-14-150810-0000_create_posts/: up.sql
blog-actix/src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
blog-actix/src/routes/: posts.rs  users.rs
chap3/manager_views/: Cargo.toml  compose.yml  note.md  note.txt  state.json
chap3/manager_views/js/: login.js  main.js
chap3/manager_views/migrations/2025-12-26-113257-0000_create_to_do_items/: up.sql
chap3/manager_views/migrations/2025-12-26-113950-0000_create_other_todo_items/: down.sql  up.sql
chap3/manager_views/migrations/2025-12-27-153711-0000_create_users/: down.sql  up.sql
chap3/manager_views/migrations/2026-01-01-152646-0000_user_title_constraint/: down.sql  up.sql
chap3/manager_views/src/: database.rs  main.rs  schema.rs
chap3/manager_views/src/auth/: jwt.rs  mod.rs  processes.rs
chap3/manager_views/src/json_serialization/: mod.rs  to_to_items.rs
chap3/manager_views/src/models/item/: item.rs  new_item.rs
chap3/manager_views/src/models/user/: new_user.rs  user.rs
chap3/manager_views/src/to_do/structs/: base.rs  done.rs  hold.rs  mod.rs  pending.rs
chap3/manager_views/src/views/: mod.rs  path.rs  token.rs
chap3/manager_views/src/views/app/: content_loader.rs  items.rs  mod.rs  (+1 more)
chap3/manager_views/templates/: main.html
chap3/manager_views/templates/components/: header.css  header.html
(+47 files in other folders)
