[package]
name = "blog-actix"
version = "0.1.0"
authors = ["your name <u@example.com>"]
edition = "2024"

[dependencies]
actix-web = "1.0"
chrono = { version = "= 0.4.29" }

env_logger = "0.6"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
dotenv = "0.10"
