[package]
name = "manager_views"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "2"
actix-rt = "1.0"

chrono = { version = "= 0.4.29" }
serde_json ={ version = "1.0", default-features = false, features = ["alloc"]}
futures = "0.3.5"
serde = "1"
actix-service = "1.0.6"

diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"

# Managing User sessions
bcrypt = "0.8.2" # to hash and check passwords
uuid = {version = "0.8", features = ["serde", "v4"]} # generate uniq IDs for our user data models.